force-app/main/default/objects/Campaign/fields/msf_AdressInitiative__c.field-meta.xml
<CustomField>
    <fullName>msf_AdressInitiative__c</fullName>
    <label>Dirección iniciativa</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>