force-app/main/default/objects/Campaign/fields/msf_Attribute_1__c.field-meta.xml
<CustomField>
    <fullName>msf_Attribute_1__c</fullName>
    <label>Atributo 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>13TV</fullName>
            </value>
            <value>
                <fullName>902 deles</fullName>
            </value>
            <value>
                <fullName>902 internet</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>ABSERT</fullName>
            </value>
            <value>
                <fullName>AD735</fullName>
            </value>
            <value>
                <fullName>Adpepper</fullName>
            </value>
            <value>
                <fullName>ADSALSA NO LLAMADOS ONG</fullName>
            </value>
            <value>
                <fullName>Afiliación Leads</fullName>
            </value>
            <value>
                <fullName>Aleatorio score 0-0,5 tel</fullName>
            </value>
            <value>
                <fullName>Altair</fullName>
            </value>
            <value>
                <fullName>Ana rosa</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>anniversary</fullName>
                <label>Aniversario</label>
            </value>
            <value>
                <fullName>Antena3</fullName>
            </value>
            <value>
                <fullName>Antevenio</fullName>
            </value>
            <value>
                <fullName>Ara</fullName>
            </value>
            <value>
                <fullName>Arquitectura y diseño</fullName>
            </value>
            <value>
                <fullName>Audi magazine</fullName>
            </value>
            <value>
                <fullName>Autonomos</fullName>
            </value>
            <value>
                <fullName>Avui</fullName>
            </value>
            <value>
                <fullName>Ayudae</fullName>
            </value>
            <value>
                <fullName>Ayuda humanitaria</fullName>
            </value>
            <value>
                <fullName>Bajas</fullName>
            </value>
            <value>
                <fullName>Banc Sabadell</fullName>
            </value>
            <value>
                <fullName>Banner Web</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>BBVA</fullName>
            </value>
            <value>
                <fullName>Bienvenida</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>