force-app/main/default/objects/Campaign/fields/msf_Attribute_2__c.field-meta.xml
<CustomField>
    <fullName>msf_Attribute_2__c</fullName>
    <label>Atributo 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A Coruña</fullName>
            </value>
            <value>
                <fullName>Alicante</fullName>
            </value>
            <value>
                <fullName>Almería</fullName>
            </value>
            <value>
                <fullName>Asturias</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Benicassim</fullName>
            </value>
            <value>
                <fullName>Bilbao</fullName>
            </value>
            <value>
                <fullName>Bodas</fullName>
            </value>
            <value>
                <fullName>Cádiz</fullName>
            </value>
            <value>
                <fullName>Camp trimestral</fullName>
            </value>
            <value>
                <fullName>Camp trimestral diciembre</fullName>
            </value>
            <value>
                <fullName>Camp trimestral fiscal</fullName>
            </value>
            <value>
                <fullName>Camp trimestral junio</fullName>
            </value>
            <value>
                <fullName>Camp trimestral navidad</fullName>
            </value>
            <value>
                <fullName>Camp trimestral octubre</fullName>
            </value>
            <value>
                <fullName>Castellon</fullName>
            </value>
            <value>
                <fullName>Ciudad Real</fullName>
            </value>
            <value>
                <fullName>Colera</fullName>
            </value>
            <value>
                <fullName>Cordoba</fullName>
            </value>
            <value>
                <fullName>Corregistro (Lead)</fullName>
            </value>
            <value>
                <fullName>Desnut</fullName>
            </value>
            <value>
                <fullName>Display (Lead)</fullName>
            </value>
            <value>
                <fullName>Donosti</fullName>
            </value>
            <value>
                <fullName>Elche</fullName>
            </value>
            <value>
                <fullName>El Corte Inglés</fullName>
            </value>
            <value>
                <fullName>Email (Lead)</fullName>
            </value>
            <value>
                <fullName>Encuesta (Lead)</fullName>
            </value>
            <value>
                <fullName>Extremadura</fullName>
            </value>
            <value>
                <fullName>Facebook (Lead)</fullName>
            </value>
            <value>
                <fullName>FE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>