force-app/main/default/objects/Campaign/fields/msf_Attribute_3__c.field-meta.xml
<CustomField>
    <fullName>msf_Attribute_3__c</fullName>
    <label>Atributo 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Non-Branded</fullName>
            </value>
            <value>
                <fullName>No sabe</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Zona Andalucía Occidental</fullName>
            </value>
            <value>
                <fullName>Zona Andalucía Oriental</fullName>
            </value>
            <value>
                <fullName>Zona Aragón</fullName>
            </value>
            <value>
                <fullName>Zona Asturias</fullName>
            </value>
            <value>
                <fullName>Zona Baleares</fullName>
            </value>
            <value>
                <fullName>Zona Canarias</fullName>
            </value>
            <value>
                <fullName>Zona Cantabria</fullName>
            </value>
            <value>
                <fullName>Zona Castilla Y Leon</fullName>
            </value>
            <value>
                <fullName>Zona Catalunya</fullName>
            </value>
            <value>
                <fullName>Zona Centro</fullName>
            </value>
            <value>
                <fullName>Zona Extremadura</fullName>
            </value>
            <value>
                <fullName>Zona Galicia</fullName>
            </value>
            <value>
                <fullName>Zona La Rioja</fullName>
            </value>
            <value>
                <fullName>Zona Levante Norte</fullName>
            </value>
            <value>
                <fullName>Zona Levante Sur</fullName>
            </value>
            <value>
                <fullName>Zona Navarra</fullName>
            </value>
            <value>
                <fullName>Zona Pais Vasco</fullName>
            </value>
            <value>
                <fullName>Zona País Vasco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>