force-app/main/default/objects/Campaign/fields/msf_BetterNowExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_BetterNowExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id externo BetterNow</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>