force-app/main/default/objects/Campaign/fields/msf_CampaignPresenceType__c.field-meta.xml
<CustomField>
    <fullName>msf_CampaignPresenceType__c</fullName>
    <label>Tipo de presencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vídeo</fullName>
            </value>
            <value>
                <fullName>Delegado/a</fullName>
            </value>
            <value>
                <fullName>F2F</fullName>
            </value>
            <value>
                <fullName>Fundrasing</fullName>
            </value>
            <value>
                <fullName>Presidente</fullName>
            </value>
            <value>
                <fullName>Expat/Voluntario</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>