force-app/main/default/objects/Campaign/fields/msf_CampaignTypeLegacyCRM__c.field-meta.xml
<CustomField>
    <fullName>msf_CampaignTypeLegacyCRM__c</fullName>
    <label>Tipo de campaña WebSAS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>