force-app/main/default/objects/Campaign/fields/msf_CanalSalidaConcatenado__c.field-meta.xml
<CustomField>
    <fullName>msf_CanalSalidaConcatenado__c</fullName>
    <formula>TEXT(msf_OutboundChannel1__c) &amp; &apos; - &apos; &amp;  TEXT(msf_OutboundChannel2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de salida</label>
    <type>Text</type>
</CustomField>