force-app/main/default/objects/Campaign/fields/msf_CityInitiative__c.field-meta.xml
<CustomField>
    <fullName>msf_CityInitiative__c</fullName>
    <label>Ciudad iniciativa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>