force-app/main/default/objects/Campaign/fields/msf_Creativity__c.field-meta.xml
<CustomField>
    <fullName>msf_Creativity__c</fullName>
    <label>Creatividad</label>
    <length>80</length>
    <type>Text</type>
</CustomField>