force-app/main/default/objects/Campaign/fields/msf_CRMExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_CRMExternalId__c</fullName>
    <displayFormat>C{0}</displayFormat>
    <externalId>true</externalId>
    <label>Id campaña</label>
    <type>AutoNumber</type>
</CustomField>