force-app/main/default/objects/Campaign/fields/msf_FinalCampaign__c.field-meta.xml
<CustomField>
    <fullName>msf_FinalCampaign__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Campaña final</label>
    <type>Checkbox</type>
</CustomField>