force-app/main/default/objects/Campaign/fields/msf_FreeText__c.field-meta.xml
<CustomField>
    <fullName>msf_FreeText__c</fullName>
    <label>Observaciones/Comentarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>