force-app/main/default/objects/Campaign/fields/msf_InitiativeDescription__c.field-meta.xml
<CustomField>
    <fullName>msf_InitiativeDescription__c</fullName>
    <label>Descripción iniciativa</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>