force-app/main/default/objects/Campaign/fields/msf_IsEmergency__c.field-meta.xml
<CustomField>
    <fullName>msf_IsEmergency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es una emergencia</label>
    <type>Checkbox</type>
</CustomField>