force-app/main/default/objects/Campaign/fields/msf_IsOnline__c.field-meta.xml
<CustomField>
    <fullName>msf_IsOnline__c</fullName>
    <label>Es online</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>