force-app/main/default/objects/Campaign/fields/msf_Objective__c.field-meta.xml
<CustomField>
    <fullName>msf_Objective__c</fullName>
    <label>Objetivo principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Captación de leads</fullName>
            </value>
            <value>
                <fullName>Captación de socios o donantes</fullName>
            </value>
            <value>
                <fullName>Conversión (de lead o donante a asociado)</fullName>
            </value>
            <value>
                <fullName>Conversión (de lead o donante a socio)</fullName>
            </value>
            <value>
                <fullName>Cultivación</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Informativo</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Petición difusión</fullName>
            </value>
            <value>
                <fullName>Recuperación</fullName>
            </value>
            <value>
                <fullName>Rendición de cuentas</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>