force-app/main/default/objects/Campaign/fields/msf_ObjectivePublic__c.field-meta.xml
<CustomField>
    <fullName>msf_ObjectivePublic__c</fullName>
    <label>Público objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MASS</fullName>
            </value>
            <value>
                <fullName>MID MINUS</fullName>
            </value>
            <value>
                <fullName>MID PLUS</fullName>
            </value>
            <value>
                <fullName>BIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>