force-app/main/default/objects/Campaign/fields/msf_OutboundChannel1__c.field-meta.xml
<CustomField>
    <fullName>msf_OutboundChannel1__c</fullName>
    <label>Canal de salida 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Afiliación</fullName>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
            <value>
                <fullName>Banners web</fullName>
                <isActive>false</isActive>
                <label>Banners web</label>
            </value>
            <value>
                <fullName>Celebraciones</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Dipticos</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Emailings</fullName>
            </value>
            <value>
                <fullName>Encarte</fullName>
            </value>
            <value>
                <fullName>Espontaneos</fullName>
                <isActive>false</isActive>
                <label>Espontaneos</label>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Exposiciones</fullName>
            </value>
            <value>
                <fullName>F2F</fullName>
            </value>
            <value>
                <fullName>Impreso</fullName>
            </value>
            <value>
                <fullName>Iniciativa Solidaria</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Mensajería Instantánea</fullName>
            </value>
            <value>
                <fullName>Officers</fullName>
            </value>
            <value>
                <fullName>Orgánico</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Pendiente digital</fullName>
            </value>
            <value>
                <fullName>Prensa o cupón</fullName>
            </value>
            <value>
                <fullName>Publicidad digital</fullName>
            </value>
            <value>
                <fullName>Publi Ext</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>