force-app/main/default/objects/Campaign/fields/msf_OutboundChannel2__c.field-meta.xml
<CustomField>
    <fullName>msf_OutboundChannel2__c</fullName>
    <label>Canal de salida 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>