force-app/main/default/objects/Campaign/fields/msf_OwnBy__c.field-meta.xml
<CustomField>
    <fullName>msf_OwnBy__c</fullName>
    <label>Propiedad de</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Colaboraciones Estratégicas</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Fidelización</fullName>
            </value>
            <value>
                <fullName>Captación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>