force-app/main/default/objects/Campaign/fields/msf_PersonWhoAttends__c.field-meta.xml
<CustomField>
    <fullName>msf_PersonWhoAttends__c</fullName>
    <description>Persona que asiste</description>
    <label>Persona que asiste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>