force-app/main/default/objects/Campaign/fields/msf_PreviousStepChannel__c.field-meta.xml
<CustomField>
    <fullName>msf_PreviousStepChannel__c</fullName>
    <label>Canal paso previo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Corregistro (lead)</fullName>
                <isActive>false</isActive>
                <label>Corregistro (lead)</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Lead online</fullName>
            </value>
            <value>
                <fullName>One to One</fullName>
            </value>
            <value>
                <fullName>SMS Opis</fullName>
            </value>
            <value>
                <fullName>SMS otros</fullName>
            </value>
            <value>
                <fullName>SMS Push</fullName>
            </value>
            <value>
                <fullName>SMS TV</fullName>
            </value>
            <value>
                <fullName>TLMK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>