force-app/main/default/objects/Campaign/fields/msf_PromoterIndividual__c.field-meta.xml
<CustomField>
    <fullName>msf_PromoterIndividual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campañas de promotor</relationshipLabel>
    <relationshipName>Campanas_promotor</relationshipName>
    <type>Lookup</type>
</CustomField>