force-app/main/default/objects/Campaign/fields/msf_Provider__c.field-meta.xml
<CustomField>
    <fullName>msf_Provider__c</fullName>
    <label>Proveedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Antevenio</fullName>
            </value>
            <value>
                <fullName>Betternow</fullName>
            </value>
            <value>
                <fullName>Bodasnet</fullName>
            </value>
            <value>
                <fullName>Busquets</fullName>
            </value>
            <value>
                <fullName>Centrocom</fullName>
            </value>
            <value>
                <fullName>Consolidar</fullName>
            </value>
            <value>
                <fullName>Datem</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>DGTL</fullName>
            </value>
            <value>
                <fullName>Entropia</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>FISL</fullName>
            </value>
            <value>
                <fullName>Fundraisingco</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>INEK</fullName>
            </value>
            <value>
                <fullName>Movistar</fullName>
            </value>
            <value>
                <fullName>Natexo</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Prosocial</fullName>
            </value>
            <value>
                <fullName>Response concepts</fullName>
            </value>
            <value>
                <fullName>Sitel</fullName>
            </value>
            <value>
                <fullName>T2O</fullName>
            </value>
            <value>
                <fullName>Taskforce</fullName>
            </value>
            <value>
                <fullName>Taskphone</fullName>
            </value>
            <value>
                <fullName>Testamenta</fullName>
            </value>
            <value>
                <fullName>Twisters</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Worldcoo</fullName>
            </value>
            <value>
                <fullName>Zankyou</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>