force-app/main/default/objects/Campaign/fields/msf_RequestPresence__c.field-meta.xml
<CustomField>
    <fullName>msf_RequestPresence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicita presencia</label>
    <type>Checkbox</type>
</CustomField>