force-app/main/default/objects/Campaign/fields/msf_RoiFide__c.field-meta.xml
<CustomField>
    <fullName>msf_RoiFide__c</fullName>
    <label>ROI Fidelización</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>